--- a/stop/action.yaml
+++ b/stop/action.yaml
@@ -20,8 +20,10 @@ runs:
   - name: Stop Falco or Sysdig containers
     shell: bash
     continue-on-error: true
+    env:
+      VERBOSE: ${{ inputs.verbose }}
     run: |
-      if [[ "${{ inputs.verbose }}" == "true" ]]; then
+      if [[ "$VERBOSE" == "true" ]]; then
         set -x
       fi
 
@@ -37,10 +39,11 @@ runs:
       RUN_ID: ${{ github.run_id }}
       REPO: ${{ github.repository }}
       GITHUB_TOKEN: ${{ github.token }}
+      VERBOSE: ${{ inputs.verbose }}
     run: |
       # If we are in live mode, we need to retrieve the job details to get the steps with timestamps
       # This is useful to understand in which step the security event occured and requires to access the GitHub API
-      if [[ ${{ inputs.verbose }} == "true" ]]; then
+      if [[ "$VERBOSE" == "true" ]]; then
         set -x
       fi
 
@@ -55,7 +58,7 @@ runs:
       echo "Job details:"
       jq -c '.jobs[] | {job_id: .id, job_name: .name, steps: .steps[] | {name: .name, started_at: .started_at, completed_at: .completed_at, status: .status}}' jobs.json > steps.json
 
-      if [[ "${{ inputs.verbose }}" == "true" ]]; then
+      if [[ "$VERBOSE" == "true" ]]; then
         cat steps.json
       fi
       mv steps.json /tmp/steps.json
@@ -63,19 +66,25 @@ runs:
   - name: Build Live Summary
     if: ${{ inputs.mode == 'live' }}
     shell: bash
+    env:
+      RUN_ID: ${{ github.run_id }}
+      REPO: ${{ github.repository }}
+      VERBOSE: ${{ inputs.verbose }}
+      ACTION_PATH: ${{ github.action_path }}
+      PULL_REQUEST_NUMBER: ${{ github.event.pull_request.number }}
     run: |
-      if [[ ${{ inputs.verbose }} == "true" ]]; then
+      if [[ "$VERBOSE" == "true" ]]; then
         set -x
       fi
 
-      python3 -m pip install -r ${{github.action_path}}/../common/requirements.txt
+      python3 -m pip install -r $ACTION_PATH/../common/requirements.txt
       ls -al /tmp
       # Falco events
       if [[ -s /tmp/falco_events.json ]]; then
         echo "Printing triggered rules in Job summary"
         echo "# Report Details" >> /tmp/report_output.md
         echo "## Falco Events" >> /tmp/report_output.md
-        content=$(python3 ${{github.action_path}}/../common/falco_events_to_md.py /tmp/falco_events.json /tmp/steps.json)
+        content=$(python3 $ACTION_PATH/../common/falco_events_to_md.py /tmp/falco_events.json /tmp/steps.json)
         echo "$content" >> /tmp/report_output.md
         cat /tmp/report_output.md
       
@@ -87,7 +96,7 @@ runs:
             -H "Authorization: token $GITHUB_TOKEN" \
             -H "Content-Type: application/json" \
             -d "{\"body\": \"***Falco Rules*** \\n\\n ${FILE_CONTENT} \\n\\n Find out more at https://github.com/$REPO/actions/runs/$RUN_ID\"}" \
-            https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments
+            https://api.github.com/repos/$REPO/issues/$PULL_REQUEST_NUMBER/comments
         else
           cat /tmp/report_output.md >> $GITHUB_STEP_SUMMARY
         fi
@@ -105,13 +114,14 @@ runs:
     shell: bash
     env:
       VERBOSE: ${{ inputs.verbose }}
+      ACTION_PATH: ${{ github.action_path }}
     run: |      
       if [[ "${VERBOSE}" == "true" ]]; then
         set -x
       fi
       PROC_FILTER="evt.type in (execve, execveat) and evt.dir=< and evt.arg.res=0"
       PROC_FILTER_OUTPUT="%proc.name,%proc.exepath,%proc.pname,%proc.pexepath,%user.name"
-      ${{github.action_path}}/../common/run_sysdig.sh filter "/tmp/capture.scap" "$PROC_FILTER" "$PROC_FILTER_OUTPUT" "/tmp/proc.txt"
+      $ACTION_PATH/../common/run_sysdig.sh filter "/tmp/capture.scap" "$PROC_FILTER" "$PROC_FILTER_OUTPUT" "/tmp/proc.txt"
       cat /tmp/proc.txt | jq '."proc.exepath"' | tr -d "\"" | while read -r file; do
         if [ -f "$file" ]; then
             line=$(sha256sum "$file")
