fix: fixed input name in analyze
Signed-off-by: schie <77834235+darryk10@users.noreply.github.com>

--- a/analyze/action.yaml
+++ b/analyze/action.yaml
@@ -95,7 +95,7 @@ runs:
         echo "config_file=${{ inputs.filters-config }}" >> $GITHUB_OUTPUT
       else
         echo "Using default config"
-        echo "config_file=${{github.action_path}}/${{inputs.config-file}}" >> $GITHUB_OUTPUT
+        echo "config_file=${{github.action_path}}/${{inputs.filters-config}}" >> $GITHUB_OUTPUT
       fi
 
 
