--- a/analyze/action.yaml
+++ b/analyze/action.yaml
@@ -364,7 +364,7 @@ runs:
         else
           python3 ${{github.action_path}}/src/integrations/openai/create_summary.py /tmp/report_output.md --model "${{inputs.openai-model}}" --user_input "${{inputs.openai-user-prompt}}" >> /tmp/report_openai.md
         fi
-        echo "" >> /tmp/report_openai.md
+        echo -e "\n" >> /tmp/report_openai.md
         cat /tmp/report_output.md >> /tmp/report_openai.md
         mv /tmp/report_openai.md /tmp/report_output.md
       fi
