Add sched_yield and nanosleep to syscall_ignore_test.config
Sort the ignore list as well.

Signed-off-by: Gerald Combs <gerald@wireshark.org>

--- a/test/config-files/syscall_ignore_test.config
+++ b/test/config-files/syscall_ignore_test.config
@@ -1,18 +1,21 @@
 {
     "ignore_syscalls": [
-        "switch",
-        "rt_sigprocmask",
-        "clock_gettime",
-        "rt_sigaction",
-        "waitid",
-        "getpid",
         "clock_getres",
-        "mprotect",
-        "gettimeofday",
-        "close",
-        "time",
-        "getdents64",
+        "clock_gettime",
         "clock_nanosleep",
-        "execveat"
+        "close",
+        "execveat",
+        "futex",
+        "getdents64",
+        "getpid",
+        "gettimeofday",
+        "mprotect",
+        "nanosleep",
+        "rt_sigaction",
+        "rt_sigprocmask",
+        "sched_yield",
+        "switch",
+        "time",
+        "waitid"
     ]
 }
