--- a/.github/workflows/test-analyze-mode-config.yaml
+++ b/.github/workflows/test-analyze-mode-config.yaml
@@ -11,7 +11,7 @@ jobs:
       actions: read
     steps:
     - name: Checkout
-      uses: actions/checkout@v4
+      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
 
     - name: Start Falco
       uses: falcosecurity/falco-actions/start@main
@@ -45,7 +45,7 @@ jobs:
       actions: read
     steps:
     - name: Checkout
-      uses: actions/checkout@v4
+      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
     - name: Analyze
       uses: falcosecurity/falco-actions/analyze@main
       with:
