--- a/.github/workflows/test-analyze-mode-report-customized.yaml
+++ b/.github/workflows/test-analyze-mode-report-customized.yaml
@@ -11,7 +11,7 @@ jobs:
       actions: read
     steps:
     - name: Checkout
-      uses: actions/checkout@v4
+      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
 
     - name: Start Falco
       uses: falcosecurity/falco-actions/start@ddcff83af077b30af70f188ba7b5446c98041446
