--- a/.github/workflows/test-live-mode.yaml
+++ b/.github/workflows/test-live-mode.yaml
@@ -21,7 +21,7 @@ jobs:
         verbose: true
         
     - name: Checkout
-      uses: actions/checkout@v4
+      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
     
     - name: Read Sensitive File
       run: |
@@ -55,7 +55,7 @@ jobs:
         verbose: true
 
     - name: Checkout
-      uses: actions/checkout@v4
+      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
 
     - name: Overwrite Source Code
       shell: bash
