--- a/analyze/action.yaml
+++ b/analyze/action.yaml
@@ -324,10 +324,16 @@ runs:
         fi
       fi
 
-      # DNS
+      # Contacted DNS Domains
       if [[ -s /tmp/dns_extract_json.txt ]]; then
         echo "## Contacted DNS Domains" >> /tmp/report_output.md
-        python3 ${{github.action_path}}/src/json_to_md.py /tmp/dns_extract_json.txt >> /tmp/report_output.md
+        if ${{ env.VT_API_KEY != '' }}; then
+          echo "Querying VirusTotal for IPs"
+          python3 ${{github.action_path}}/src/integrations/virustotal/vt_script.py /tmp/dns_extract_json.txt --mode domains >> /tmp/outbound_vt.txt
+          python3 ${{github.action_path}}/src/json_to_md.py /tmp/dns_extract_json.txt >> /tmp/report_output.md
+        else
+          python3 ${{github.action_path}}/src/json_to_md.py /tmp/dns_extract_json.txt >> /tmp/report_output.md
+        fi
       fi
 
       # Containers
